--- a/res/layout/dialog_cloudflare_captcha.xml
+++ b/res/layout/dialog_cloudflare_captcha.xml
@@ -33,7 +33,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <ImageView
         android:id="@+id/dialog_captcha_view" 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:padding="8dp"
         android:contentDescription="@string/captcha" />
     
