--- a/res/layout/dialog_cloudflare_captcha.xml
+++ b/res/layout/dialog_cloudflare_captcha.xml
@@ -17,33 +17,37 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:orientation="vertical" >
-    
-    <TextView 
+    android:layout_height="wrap_content" >
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="@string/dialog_cloudflare_captcha_text"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-    <ImageView
-        android:id="@+id/dialog_captcha_view" 
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:padding="8dp"
-        android:contentDescription="@string/captcha" />
-    
-    <EditText
-        android:id="@+id/dialog_captcha_field"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:singleLine="true"
-        android:imeOptions="flagNoFullscreen|flagNoExtractUi"
-        android:hint="@string/dialog_cloudflare_captcha_hint" />
-
-</LinearLayout>
+        android:orientation="vertical" >
+        
+        <TextView 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/dialog_cloudflare_captcha_text"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+        
+        <ImageView
+            android:id="@+id/dialog_captcha_view" 
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:padding="8dp"
+            android:contentDescription="@string/captcha" />
+        
+        <EditText
+            android:id="@+id/dialog_captcha_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:singleLine="true"
+            android:imeOptions="flagNoFullscreen|flagNoExtractUi"
+            android:hint="@string/dialog_cloudflare_captcha_hint" />
+        
+    </LinearLayout>
+</ScrollView>
