--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -70,11 +70,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_theme_value_photon">PREF_THEME_VALUE_PHOTON</string>
     <string name="pref_theme_value_neutron">PREF_THEME_VALUE_NEUTRON</string>
     <string name="pref_theme_value_gurochan">PREF_THEME_VALUE_GUROCHAN</string>
+    <string name="pref_theme_value_tomorrow">PREF_THEME_VALUE_TOMORROW</string>
+    <string name="pref_theme_value_mikuba">PREF_THEME_VALUE_MIKUBA</string>
     <string-array name="pref_theme_values" translatable="false">
         <item>@string/pref_theme_value_futaba</item>
         <item>@string/pref_theme_value_photon</item>
         <item>@string/pref_theme_value_neutron</item>
         <item>@string/pref_theme_value_gurochan</item>
+        <item>@string/pref_theme_value_tomorrow</item>
+        <item>@string/pref_theme_value_mikuba</item>
     </string-array>
     <string name="pref_key_font_size">PREF_KEY_FONT_SIZE</string>
     <string name="pref_font_size_value_default">@string/pref_font_size_value_small</string>
