--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -36,8 +36,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <style name="Futaba_Base" parent="@style/Theme_Light_Switch">
         <item name="materialPrimary">#FFFFEE</item>
-        <!-- <item name="materialPrimaryDark"></item>
-        <item name="materialNavigationBar"></item> -->
         <item name="android:textColorPrimary">#800000</item>
         <item name="activityRootBackground">#FFFFEE</item>
         <item name="sidebarBackground">#CCFFFFEE</item>
@@ -190,6 +188,86 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item name="actionSave">@drawable/ic_action_save_light</item>
     </style>
     
+    <style name="Tomorrow_Base" parent="@style/Theme_Dark_Switch">
+        <item name="materialPrimary">#1D1F21</item>
+        <item name="android:textColorPrimary">#C5C8C6</item>
+        <item name="activityRootBackground">#1D1F21</item>
+        <item name="sidebarBackground">#CC1D1F21</item>
+        <item name="sidebarSelectedItem">@drawable/sidebar_selected_tomorrow</item>
+        <item name="listSeparatorBackground">#282A2E</item>
+        <item name="postUnreadOverlay">#7F3A3A42</item>
+        <item name="postBackground">#282A2E</item>
+        <item name="postIndexForeground">#B5BD68</item>
+        <item name="postIndexOverBumpLimit">#C41E3A</item>
+        <item name="postNumberForeground">#5F89AC</item>
+        <item name="postNameForeground">#C5C8C6</item>
+        <item name="postOpForeground">#008000</item>
+        <item name="postSageForeground">#993333</item>
+        <item name="postTripForeground">#5F89AC</item>
+        <item name="postTitleForeground">#B294BB</item>
+        <item name="postQuoteForeground">#B5BD68</item>
+        <item name="spoilerForeground">#FFFFFF</item>
+        <item name="spoilerBackground">#000000</item>
+        <item name="urlLinkForeground">#81A2BE</item>
+        <item name="itemInfoForeground">#707070</item>
+        <item name="searchHighlightBackground">#EF0FFF</item>
+        
+        <item name="iconDrawer">@drawable/ic_drawer_dark</item>
+        <item name="dialogBackgroundShadow">@drawable/dialog_full_holo_dark</item>
+        <item name="iconItemPrevious">@drawable/ic_action_previous_item_dark</item>
+        <item name="iconItemNext">@drawable/ic_action_next_item_dark</item>
+        <item name="sidebarBtnNewTab">@drawable/sidebar_newtab_dark</item>
+        <item name="sidebarBtnHistory">@drawable/sidebar_history_dark</item>
+        <item name="sidebarBtnFavorites">@drawable/sidebar_favorites_dark</item>
+        <item name="iconBtnClose">@drawable/ic_action_remove_dark</item>
+        <item name="actionRefresh">@drawable/ic_action_refresh_dark</item>
+        <item name="actionAddPost">@drawable/ic_action_edit_dark</item>
+        <item name="actionAddAttachment">@drawable/ic_action_new_attachment_dark</item>
+        <item name="actionAddGallery">@drawable/ic_action_new_picture_dark</item>
+        <item name="actionSave">@drawable/ic_action_save_dark</item>
+    </style>
+    
+    <style name="Mikuba_Base" parent="@style/Theme_Light_Switch">
+        <item name="materialPrimary">#66EEFF</item>
+        <item name="materialPrimaryDark">#408090</item>
+        <item name="materialNavigationBar">#112535</item>
+        <item name="android:textColorPrimary">#000000</item>
+        <item name="activityRootBackground">#FAFAFA</item>
+        <item name="sidebarBackground">#CCFAFAFA</item>
+        <item name="sidebarSelectedItem">@drawable/sidebar_selected_mikuba</item>
+        <item name="listSeparatorBackground">#EAEFEF</item>
+        <item name="postUnreadOverlay">#7FFF623F</item>
+        <item name="postBackground">#EEEEEE</item>
+        <item name="postIndexForeground">#789922</item>
+        <item name="postIndexOverBumpLimit">#C41E3A</item>
+        <item name="postNumberForeground">#418A8E</item>
+        <item name="postNameForeground">#204547</item>
+        <item name="postOpForeground">#008000</item>
+        <item name="postSageForeground">#993333</item>
+        <item name="postTripForeground">#228854</item>
+        <item name="postTitleForeground">#000000</item>
+        <item name="postQuoteForeground">#89B83F</item>
+        <item name="spoilerForeground">#000000</item>
+        <item name="spoilerBackground">#DDDDDD</item>
+        <item name="urlLinkForeground">#418A8E</item>
+        <item name="itemInfoForeground">#999999</item>
+        <item name="searchHighlightBackground">#EF0FFF</item>
+        
+        <item name="iconDrawer">@drawable/ic_drawer_light</item>
+        <item name="dialogBackgroundShadow">@drawable/dialog_full_holo_light</item>
+        <item name="iconItemPrevious">@drawable/ic_action_previous_item_light</item>
+        <item name="iconItemNext">@drawable/ic_action_next_item_light</item>
+        <item name="sidebarBtnNewTab">@drawable/sidebar_newtab_light</item>
+        <item name="sidebarBtnHistory">@drawable/sidebar_history_light</item>
+        <item name="sidebarBtnFavorites">@drawable/sidebar_favorites_light</item>
+        <item name="iconBtnClose">@drawable/ic_action_remove_light</item>
+        <item name="actionRefresh">@drawable/ic_action_refresh_light</item>
+        <item name="actionAddPost">@drawable/ic_action_edit_light</item>
+        <item name="actionAddAttachment">@drawable/ic_action_new_attachment_light</item>
+        <item name="actionAddGallery">@drawable/ic_action_new_picture_light</item>
+        <item name="actionSave">@drawable/ic_action_save_light</item>
+    </style>
+    
     <style name="TextAppearance_Small.Small" parent="@android:style/TextAppearance.Small"> <item name="android:textSize">11sp</item> </style>
     <style name="TextAppearance_Small.Medium" parent="@android:style/TextAppearance.Medium"> <item name="android:textSize">13sp</item> </style>
     <style name="TextAppearance_Small.Large" parent="@android:style/TextAppearance.Large"> <item name="android:textSize">16sp</item> </style>
@@ -297,6 +375,54 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </style>
     
     <style name="Gurochan_Huge" parent="@style/Gurochan_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Huge.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Huge.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Huge.Large</item>
+    </style>
+    
+    <style name="Tomorrow_Small" parent="@style/Tomorrow_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Small.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Small.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Small.Large</item>
+    </style>
+    
+    <style name="Tomorrow_Medium" parent="@style/Tomorrow_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Medium.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Medium.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Medium.Large</item>
+    </style>
+    
+    <style name="Tomorrow_Large" parent="@style/Tomorrow_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Large.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Large.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Large.Large</item>
+    </style>
+    
+    <style name="Tomorrow_Huge" parent="@style/Tomorrow_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Huge.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Huge.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Huge.Large</item>
+    </style>
+    
+    <style name="Mikuba_Small" parent="@style/Mikuba_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Small.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Small.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Small.Large</item>
+    </style>
+    
+    <style name="Mikuba_Medium" parent="@style/Mikuba_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Medium.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Medium.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Medium.Large</item>
+    </style>
+    
+    <style name="Mikuba_Large" parent="@style/Mikuba_Base">
+        <item name="android:textAppearanceSmall">@style/TextAppearance_Large.Small</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance_Large.Medium</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance_Large.Large</item>
+    </style>
+    
+    <style name="Mikuba_Huge" parent="@style/Mikuba_Base">
         <item name="android:textAppearanceSmall">@style/TextAppearance_Huge.Small</item>
         <item name="android:textAppearanceMedium">@style/TextAppearance_Huge.Medium</item>
         <item name="android:textAppearanceLarge">@style/TextAppearance_Huge.Large</item>
