show attachment information

--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -65,6 +65,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <item name="context_menu_thumb_load_thumb" type="id"/>
     <item name="context_menu_thumb_download" type="id"/>
     <item name="context_menu_thumb_copy_url" type="id"/>
+    <item name="context_menu_thumb_attachment_info" type="id"/>
     <item name="context_menu_thumb_search_google" type="id"/>
     
 </resources>
