wifi preference (download thumbnails only via wifi); fixed file cache (.nomedia file)

--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -53,7 +53,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_about_version">PREF_KEY_ABOUT_VERSION</string>
     <string name="pref_key_about_license">PREF_KEY_ABOUT_LICENSE</string>
     <string name="pref_key_download_dir">PREF_KEY_DOWNLOAD_DIR</string>
-    <string name="pref_key_download_thumbs">PREF_KEY_DOWNLOAD_THUMBS</string>
+    <string name="pref_key_download_thumbs">PREF_KEY_DOWNLOAD_THUMBS1</string>
+    <string name="pref_download_thumbs_value_default">@string/pref_download_thumbs_value_always</string>
+    <string name="pref_download_thumbs_value_always">PREF_DOWNLOAD_THUMBS_VALUE_ALWAYS</string>
+    <string name="pref_download_thumbs_value_wifi_only">PREF_DOWNLOAD_THUMBS_VALUE_WIFI_ONLY</string>
+    <string name="pref_download_thumbs_value_never">PREF_DOWNLOAD_THUMBS_VALUE_NEVER</string>
+    <string-array name="pref_download_thumbs_values">
+        <item>@string/pref_download_thumbs_value_always</item>
+        <item>@string/pref_download_thumbs_value_wifi_only</item>
+        <item>@string/pref_download_thumbs_value_never</item>
+    </string-array>
     <string name="pref_key_download_format">PREF_KEY_DOWNLOAD_FORMAT</string>
     <string name="pref_download_format_value_default">@string/pref_download_format_value_directory</string>
     <string name="pref_download_format_value_directory">PREF_DOWNLOAD_FORMAT_VALUE_DIRECTORY</string>
